--- a/TMDT/Mail/Email.html
+++ b/TMDT/Mail/Email.html
@@ -47,6 +47,10 @@
             <th>Thành tiền</th>
         </tr>
         [OrderDetails]
+        <tr  float="right">
+        <td colspan="3">Tổng: </td>
+        <td>[total]₫</td>
+        </tr>
     </table>
 </body>
 </html>
